# insight-Astra

Backend/: main.py  pyproject.toml  requirements.txt  test_imports.py  verify_analytics.py  verify_implementation.py
Backend/app/Supabase/: profiles.sql
Backend/app/analytics/: context_manager.py  engine.py  explainability.py  intent_classifier.py  rag_engine.py
Backend/app/api/v1/: analytics.py  chat.py
Backend/app/core/: auth.py  llm.py  redis_client.py  supabase.py
Backend/app/notebook/: upi_analytics_eda.ipynb
Backend/app/services/: Agent.py
Backend/notebooks/: UPI.ipynb
Backend/storage/: sessions_storage.json
Frontend/: .gitignore  package.json  tailwind.config.js
Frontend/.cursor/: mcp.json
Frontend/src/: App.jsx  index.css
Frontend/src/components/: AskMeAnything.jsx  CTA.jsx  CustomCursor.jsx  ErrorBoundary.jsx  Features.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  Stats.jsx
Frontend/src/components/ui/: select.jsx  slider.jsx
Frontend/src/context/: AnalyticsContext.jsx  AuthContext.jsx
Frontend/src/lib/: supabase.js
Frontend/src/pages/: Analytics.jsx  AutoReport.jsx  BenchmarkPerformance.jsx  BusinessAdvisor.jsx  Dashboard.jsx  DashboardLayout.jsx  ExecutiveSimulator.jsx  ForgotPasswordPage.jsx  LandingPage.jsx  LoginPage.jsx  NotFoundPage.jsx  ResetPasswordPage.jsx  SignupPage.jsx
Frontend/src/services/: api.js
